Fix whitespace wrapping for 'and friends'

--- a/guest.css
+++ b/guest.css
@@ -36,4 +36,5 @@ html {
 
 .friends {
 	opacity: 0.6;
+	white-space: nowrap;
 }
